Fix overlap issues

--- a/about.css
+++ b/about.css
@@ -15,10 +15,6 @@ body {
 	padding: 0;
 }
 
-.container {
-	width: 80%;
-}
-
 /* Navigation Menu */
 nav ul {
 	list-style: none;
@@ -49,10 +45,12 @@ nav ul li a:hover {
 	background-color: #bcb9d8;
 	color: #dedeea;
 }
-
+.menu-toggle{
+  display: none;
+}
 /* Hamburger button */
 .hamburger {
-	display: block;
+	display: none;
 	font-size: 2rem;
 	cursor: pointer;
 	position: absolute;
@@ -65,6 +63,7 @@ nav ul li a:hover {
 }
 /* Main Content */
 main {
+	margin-top: 64px;
 	margin-left: 270px;
 	padding: 20px;
 	width: calc(100% - 270px);
@@ -421,11 +420,6 @@ main {
 		margin-left: 0;
 		padding: 1rem;
 		width: 100%;
-	}
-
-	.container {
-		width: 100%;
-		padding: 0 10px;
 	}
 
 	.about-content {
